--- a/application/index/view/teacher/index.html
+++ b/application/index/view/teacher/index.html
@@ -6,7 +6,6 @@
 <table class="table table-striped table-bordered">
     <tr>
         <th>序号</th>
-        <th>ID</th>
         <th>姓名</th>
         <th>性别</th>
         <th>邮箱</th>
@@ -17,7 +16,6 @@
     {volist name="teachers" id="vo" key="num"}
     <tr>
         <td>{$num}</td>
-        <td>{$vo.id}</td>
         <td>{$vo.name}</td>
         <td>
             {eq name="vo.sex" value="0"} 男 {else/} 女 {/eq}
@@ -25,8 +23,8 @@
         <td>{$vo.email}</td>
         <td>{$vo.username}</td>
         <td>{$vo.create_time}</td>
-        <td><a href="{:url('teacher/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
-        <td><a href="{:url('',['id'=>$vo.id])}"><i class="fa fa-pencil"></i></a></td>
+        <td><a href="{:url('teacher/del',['id'=>$vo.id])}" title="删除"><i class="fa fa-times"></i></a></td>
+        <td><a href="{:url('teacher/update',['id'=>$vo.id])}" title="编辑"><i class="fa fa-pencil"></i></a></td>
     </tr>
     {/volist}
 </table>
