--- a/application/index/view/klass/edit.html
+++ b/application/index/view/klass/edit.html
@@ -18,7 +18,7 @@
         <div class="col-sm-10">
             <select class="form-control" name="teacher_id">
                 {volist name="teachers" id='vo1'}
-                    <option value="{$vo.id}" {eq name="vo1.id" value="vo1.teacher_id"}selected{/eq}>{$vo1.name}</option>
+                    <option value="{$vo.id}" {eq name="$vo1.id" value="$vo.teacher_id"}selected{/eq}>{$vo1.name}</option>
                 {/volist}
             </select>
         </div>
