--- a/application/index/view/main.html
+++ b/application/index/view/main.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="__STATIC__/css/index.css">
     <link rel="stylesheet" href="__STATIC__/css/bootstrap.min.css">
     <link rel="stylesheet" href="__STATIC__/css/font-awesome.min.css">
+    <link href="__STATIC__/umeditor/themes/default/css/umeditor.css" type="text/css" rel="stylesheet">
     <style>
     body {
         font-family: Microsoft Yahei, Helvetica Neue, Arial, Helvetica, sans-serif;
@@ -122,7 +123,7 @@
             <!-- 左边end -->
             <!-- ############################################### -->
             <!-- 右边start -->
-            <div class="col-md-9">
+            <div class="col-md-9 m1">
                 {block name='content'}{/block}
             </div>
             <!-- 右边end -->
@@ -138,6 +139,10 @@
 </html>
 <script src="__STATIC__/js/Jquery.js"></script>
 <script type="text/javascript" src="__STATIC__/js/bootstrap.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="__STATIC__/umeditor/umeditor.config.js"></script>
+<script type="text/javascript" src="__STATIC__/umeditor/third-party/jquery.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="__STATIC__/umeditor/umeditor.min.js"></script>
+<script type="text/javascript" src="__STATIC__/umeditor/lang/zh-cn/zh-cn.js"></script>
 <script>
 var pathname = window.location.pathname + window.location.search;
 $(".status li a").each(function() {
@@ -147,4 +152,25 @@ $(".status li a").each(function() {
         $('#m0').parents('.n0').css('display','block');
     }
 });
+</script>
+<script type="text/javascript">
+    //实例化编辑器
+    var um = UM.getEditor('myEditor');
+    um.addListener('blur',function(){
+        $('#focush2').html('编辑器失去焦点了')
+    });
+    um.addListener('focus',function(){
+        $('#focush2').html('')
+    });
+    um.ready(function() {
+        //设置编辑器的内容
+        um.setContent('hello');
+        //获取html内容，返回: <p>hello</p>
+        var html = um.getContent();
+        //获取纯文本内容，返回: hello
+        var txt = um.getContentTxt();
+        var ww = $('.m1').width();
+        UM.getEditor('myEditor').setHeight(300);
+        UM.getEditor('myEditor').setWidth(ww*0.83);
+    });
 </script>
