--- a/application/index/view/notice/edit.html
+++ b/application/index/view/notice/edit.html
@@ -14,9 +14,12 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="content" class="col-sm-2 control-label">内容</label>
+        <label for="content1" class="col-sm-2 control-label">内容</label>
         <div class="col-sm-10">
-            <textarea class="form-control" name="content" id="content" rows="3">{$vo.content}</textarea>
+            <!--style给定宽度可以影响编辑器的最终宽度-->
+            <script type="text/plain" id="myEditor" style="width:1000px;height:240px;">
+                <textarea class="form-control" name="content" id="content1" rows="3">{$vo.content}</textarea>
+            </script>
         </div>
     </div>
     <div class="form-group">
