--- a/application/index/view/notice/edit.html
+++ b/application/index/view/notice/edit.html
@@ -17,7 +17,9 @@
         <label for="myEditor" class="col-sm-2 control-label">内容</label>
         <div class="col-sm-10">
             <!--style给定宽度可以影响编辑器的最终宽度-->
-                <textarea class="form-control" name="content" id="myEditor" rows="3">{$vo.content}</textarea>
+            <script id="myEditor" name="content" type="text/plain">
+                {$vo.content}
+            </script>
         </div>
     </div>
     <div class="form-group">
