--- a/application/index/view/main.html
+++ b/application/index/view/main.html
@@ -90,7 +90,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-secret" style="margin-right:5px;"></i>{:session('ss_name')}<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{:url('login/login')}">退出</a></li>
+                            <li><a href="{:url('login/logout')}">退出</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="{:url('login/pass')}">修改密码</a></li>
                         </ul>
