--- a/application/index/view/main.html
+++ b/application/index/view/main.html
@@ -92,10 +92,50 @@
                         <ul class="dropdown-menu">
                             <li><a href="{:url('login/logout')}">退出</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="{:url('login/pass')}">修改密码</a></li>
+                            <li data-toggle="modal" data-target="#divModalpp"><a href="#">修改密码</a></li>
                         </ul>
                     </li>
                 </ul>
+            </div>
+            <!-- 模态弹出框修改管理员密码 -->
+            <div id="divModalpp" class="modal fade" data-backdrop="false">
+                <!--modal-dialog对话框-->
+                <div class="modal-dialog">
+                    <!--弹出框的内容，包含header,body,footer-->
+                    <div class="modal-content">
+                        <form action="{:url('login/pass')}" class="form-horizontal" method="post">
+                            <div class="modal-header">
+                                <!--close当前按钮显示的是关闭效果，data-dismiss关闭模态框-->
+                                <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                                <h4 class="model-title">修改管理员密码</h4>
+                            </div>
+                            <div class="modal-body">
+                                <div class="form-group" style="margin-top:10px;">
+                                    <label for="inputEmail1" class="col-sm-2 control-label">原始密码</label>
+                                    <div class="col-sm-10">
+                                      <input type="password" id="inputEmail1" class="form-control" name="pwd_origin" placeholder="请输入原始密码">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputEmail2" class="col-sm-2 control-label">新密码</label>
+                                    <div class="col-sm-10">
+                                      <input type="password" id="inputEmail2" class="form-control" name="pwd_new" placeholder="请输入新密码">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputEmail3" class="col-sm-2 control-label">确认密码</label>
+                                    <div class="col-sm-10">
+                                      <input type="password" id="inputEmail3" class="form-control" name="pwd_confirm" placeholder="请输入确认密码">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
             <!-- /.navbar-collapse -->
         </div>
